cmake_minimum_required(VERSION 3.2)

PROJECT(dmcronpp)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
INCLUDE(cmake/ModuleImport.cmake)
INCLUDE(cmake/ModuleCompileOptions.cmake)
ModuleSetCompileOptions()

SET(DMCRONPP_VERSION_MAJOR "1")
SET(DMCRONPP_VERSION_MINOR "0")
SET(DMCRONPP_VERSION_PATCH "1")
SET(DMCRONPP_VERSION "${DMCRONPP_VERSION_MAJOR}.${DMCRONPP_VERSION_MINOR}.${DMCRONPP_VERSION_PATCH}")

MESSAGE(STATUS "VERSION: ${DMCRONPP_VERSION}")

OPTION(USE_DMCRONPP "use dmcronpp" OFF)

ExeImport("test" "")

